--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "googleapis": "^81.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.2"
+    "mongoose": "^5.13.2",
+    "nodemailer": "^6.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
