--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "googleapis": "^81.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^5.0.0",
     "nodemailer": "^6.6.2"
   },
   "devDependencies": {
