--- a/khaibaoyte/package.json
+++ b/khaibaoyte/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
