--- a/khaibaoyte/package.json
+++ b/khaibaoyte/package.json
@@ -15,6 +15,7 @@
     "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
